# chronos-x

./: .clang-format  .gitignore  CMakeLists.txt  PUBLISHING_CHECKLIST.md  README.md
.github/workflows/: ci.yml
benchmarks/: bench_data_plane.cpp
bpf/: xdp_redirect.bpf.c
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  LIMITATIONS.md  TESTING.md
include/chronosx/: af_xdp_runtime.hpp  chaos_engine.hpp  control_plane.hpp  data_plane.hpp  frame_allocator.hpp  libxdp_socket.hpp  packet_parser.hpp  protocol.hpp  socket_manager.hpp  spsc_queue.hpp  timing_wheel.hpp  tui.hpp  types.hpp
scripts/: build.sh  run_benchmark.sh  run_tests.sh
src/: main.cpp
tests/: test_af_xdp_runtime.cpp  test_chaos_engine.cpp  test_control_plane.cpp  test_data_plane.cpp  test_frame_allocator.cpp  test_libxdp_socket.cpp  test_packet_parser.cpp  test_protocol.cpp  test_socket_manager.cpp  test_spsc_queue.cpp  test_stress.cpp  test_timing_wheel.cpp  test_types_layout.cpp
tools/: chronos_client.py
